--- a/.gitignore
+++ b/.gitignore
@@ -1,10 +1,25 @@
+# Python Bytecode files
 *.pyc
 __pycache__/
+
+# Virtual Environment
+env/
+
+# Django Database and Media Files
 db.sqlite3
-.env
+*.sqlite3
 /static/
 /media/
+
+# Environment variable file
+.env
+
+# Log files
 *.log
-*.sqlite3
+
+# System files
 *.DS_Store
-*.vscode/
+
+# IDE configuration files
+.vscode/
+.idea/
